--- a/Ejercicio_03/style.css
+++ b/Ejercicio_03/style.css
@@ -1,5 +1,8 @@
 body{
     font-family: 'Plus Jakarta Sans', sans-serif;
+    background-color: #FBAB7E;
+    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+
 }
 
 main {
@@ -20,6 +23,7 @@ main {
     border: 2px solid rgb(201, 49, 11);
     border-radius: 20px;
     background-color: rgb(226, 148, 32);
+    box-shadow: 1px 1px 10px 1px;
 }
 
 .input-card{
