--- a/Ejercicio_04/css/style.css
+++ b/Ejercicio_04/css/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
+    font-family: 'Montserrat', sans-serif;
 }
 
 body{
@@ -13,14 +13,16 @@ main{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100%;
+    /* width: 100%; */
 }
 
 .card-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     border: 1px solid black;
+
 }
 
 /*//////////////*/
@@ -28,13 +30,32 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    padding: 10px;
 }
 
 .pizza-img{
-    width: 500px;
-    /* height: 500px; */
+    width: 400px;
+    box-shadow: 0 1px 12px rgba(0,0,0,0.5);
 }
+/*//////////////*/
 
+.error-message{
+    display: inline;
+    padding: 10px;
+    background-color: rgb(218, 57, 57)
+}
+.error-delete {
+    display: none;
+} 
+
+.empty-input-ms {
+    display: inline;
+    background-color: blanchedalmond;
+}
+.empty-input-ms-delete{
+    display: none;
+}
 /*///////////////*/
 
 #ID-form{
