--- a/Ejercicio_05/style.css
+++ b/Ejercicio_05/style.css
@@ -25,6 +25,18 @@ main {
     border: 1px solid violet;
 }
 
+.hide {
+    display: none;
+}
+
 .item img {
     width: 100%;
+}
+/*//////////*/
+.empty-input{
+    display: none;
+}
+
+.empty-input-active {
+    display: inline;
 }
