--- a/Ejercicio_05/style.css
+++ b/Ejercicio_05/style.css
@@ -11,15 +11,15 @@ main {
 
 .container-card {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    /* height: 500px; */
 }
 
 .item {
-    width: 50%;
-    height: 400px;
+    width: 400px;
+    /* height: 100%; */
     display: flex;
     flex-direction: column;
     border: 1px solid violet;
@@ -39,4 +39,13 @@ main {
 
 .empty-input-active {
     display: inline;
+}
+
+/*////////*/
+.clean-button{
+    display: inline;
+}
+
+.clean-button-hide {
+    display: none;
 }
