--- a/Ejercicio_05/style.css
+++ b/Ejercicio_05/style.css
@@ -3,45 +3,107 @@
     margin: 0;
     box-sizing: border-box;
     list-style: none;
+    list-style: none;font-family: 'Lato', sans-serif;
 }
 
 main {
+    background: linear-gradient(180deg, rgba(255,232,190,1) 22%, rgba(255,223,169,1) 56%, rgba(255,204,149,1) 100%);
     height: 100vh;
 }
+/*///// FORM CONTAINER /////*/
+.form-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.form-container button {
+    border: none;
+    padding: 10px;
+    margin-top: 8px;
+    transition: all 0.3s;
+}
+.form-container button:hover {
+    background-color: aquamarine;
+}
 
+/*///// FORM /////*/
+.search-pizza{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    border: 1px black solid;
+    padding: 16px;
+}
+.search-pizza h2 {
+    margin-bottom: 10px;
+}
+.search-pizza input {
+    margin-bottom: 10px;
+}
+.search-pizza button {
+    border: none;
+    padding: 8px;
+    transition: all 0.3s;
+}
+.search-pizza button:hover {
+    background-color: aqua;
+}
+
+/*///// CARDS /////*/
 .container-card {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    /* height: 500px; */
+    /* height: 100%; */
 }
 
 .item {
     width: 400px;
-    /* height: 100%; */
     display: flex;
     flex-direction: column;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 1px 12px rgba(0, 0, 0, 0.781);
     border: 1px solid violet;
 }
 
-.hide {
+.item-hide {
     display: none;
 }
 
 .item img {
     width: 100%;
 }
-/*//////////*/
+.item h2 {
+    text-align: center;
+    padding: 8px;
+    background-color: bisque;
+}
+.item p {
+    padding-left: 10px;
+}
+.item li {
+    margin-left: 20px;
+    padding: 5px 0px;
+}
+.item span {
+    text-align: center;
+    padding: 4px;
+    background-color: aquamarine;
+}
+/*///// EMPTY INPUT TEXT /////*/
 .empty-input{
     display: none;
 }
 
 .empty-input-active {
     display: inline;
+    text-align: center;
 }
 
-/*////////*/
+/*///// CLEAN BUTTON /////*/
 .clean-button{
     display: inline;
 }
