--- a/Ejercicio_05/style.css
+++ b/Ejercicio_05/style.css
@@ -55,7 +55,7 @@ main {
 .container-card {
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     width: 100%;
     /* height: 100%; */
 }
@@ -65,8 +65,8 @@ main {
     display: flex;
     flex-direction: column;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0 1px 12px rgba(0, 0, 0, 0.781);
-    border: 1px solid violet;
+    box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.781);
+    /* border: 1px solid violet; */
 }
 
 .item-hide {
