--- a/Ejercicio_05/style.css
+++ b/Ejercicio_05/style.css
@@ -8,7 +8,7 @@
 
 main {
     background: linear-gradient(180deg, rgba(255,232,190,1) 22%, rgba(255,223,169,1) 56%, rgba(255,204,149,1) 100%);
-    height: 100vh;
+    /* height: 100vh; */
 }
 /*///// FORM CONTAINER /////*/
 .form-container{
@@ -55,6 +55,7 @@ main {
 .container-card {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     /* align-items: center; */
     width: 100%;
     /* height: 100%; */
