--- a/Ejercicio_05/style.css
+++ b/Ejercicio_05/style.css
@@ -8,7 +8,7 @@
 
 main {
     background: linear-gradient(180deg, rgba(255,232,190,1) 22%, rgba(255,223,169,1) 56%, rgba(255,204,149,1) 100%);
-    /* height: 100vh; */
+    height: 100%;
 }
 /*///// FORM CONTAINER /////*/
 .form-container{
@@ -66,7 +66,8 @@ main {
     display: flex;
     flex-direction: column;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.781);
+    margin-top: 16px;
+    /* box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.781); */
     /* border: 1px solid violet; */
 }
 
@@ -81,7 +82,7 @@ main {
 .item h2 {
     text-align: center;
     padding: 8px;
-    background-color: bisque;
+    /* background-color: bisque; */
 }
 .item p {
     padding-left: 10px;
