--- a/Ejercicio_05/style.css
+++ b/Ejercicio_05/style.css
@@ -5,10 +5,9 @@
     list-style: none;
     list-style: none;font-family: 'Lato', sans-serif;
 }
-
 main {
     background: linear-gradient(180deg, rgba(255,232,190,1) 22%, rgba(255,223,169,1) 56%, rgba(255,204,149,1) 100%);
-    height: 100%;
+    
 }
 /*///// FORM CONTAINER /////*/
 .form-container{
@@ -55,10 +54,11 @@ main {
 .container-card {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    flex-wrap:wrap;
+    gap: 20px;
     /* align-items: center; */
     width: 100%;
-    /* height: 100%; */
+    
 }
 
 .item {
